namespaces/cms/network/wordpress.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
  generation: 1
  name: wordpress
  namespace: cms
spec:
  ingressClassName: nginx
  rules:
  - host: cms.thealgoera.com
    http:
      paths:
      - backend:
          service:
            name: wordpress
            port:
              number: 80
        path: /
        pathType: Prefix
